<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/archive"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_progress"
        android:icon="@drawable/ic_progress_report"
        android:title="@string/progress_report"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_difficulty"
        android:title="@string/difficulty"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rate_app"
        android:title="@string/rate_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_upgrade_pro"
        android:title="@string/upgrade_to_pro"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_licenses"
        android:title="@string/open_source_licenses"
        app:showAsAction="never" />
</menu>